--- a/env.example
+++ b/env.example
@@ -1,7 +1,13 @@
 # Application configuration variables
 APP_NAME=project_name
+APP_HOST=app.backend.dev
 APP_PORT=8000
+APP_SECRET_KEY='ur secret key'
 APP_ENV=dev
+DJANGO_SETTINGS_MODULE=project_name.settings.dev
+ALLOWED_HOSTS='app.backend.dev'
+CSRF_TRUSTED_ORIGINS='http://app.backend.dev'
+CORS_ALLOWED_ORIGINS=['http://app.backend.dev','http://localhost:3000']
 
 # Postgres configuration variables
 POSTGRES_USER=postgres
@@ -10,6 +16,6 @@ POSTGRES_DB=postgres
 POSTGRES_PORT=5432
 POSTGRES_HOST=db
 
-# Celery configuration variables
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+
+# Traefik configuration variables
+LETSENCRYPT_EMAIL=your_email
