--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 # Application configuration variables
 APP_NAME=project_name
-APP_HOST=app.backend.dev
+APP_HOST=0.0.0.0
 APP_PORT=8000
 APP_SECRET_KEY='ur secret key'
 APP_ENV=dev
@@ -19,3 +19,4 @@ POSTGRES_HOST=db
 
 # Traefik configuration variables
 LETSENCRYPT_EMAIL=your_email
+APP_DOMAIN=app.backend.dev
