--- a/env.example
+++ b/env.example
@@ -2,8 +2,9 @@
 APP_NAME=project_name
 APP_HOST=0.0.0.0
 APP_PORT=8000
-APP_SECRET_KEY='ur secret key'
+SECRET_KEY='ur secret key'
 APP_ENV=dev
+DEBUG=True
 DJANGO_SETTINGS_MODULE=project_name.settings.dev
 ALLOWED_HOSTS='app.backend.dev'
 CSRF_TRUSTED_ORIGINS='http://app.backend.dev'
