--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@ DEBUG=True
 DJANGO_SETTINGS_MODULE=project_name.settings.dev
 ALLOWED_HOSTS='app.backend.dev'
 CSRF_TRUSTED_ORIGINS='http://app.backend.dev'
-CORS_ALLOWED_ORIGINS=['http://app.backend.dev','http://localhost:3000']
+CORS_ALLOWED_ORIGINS=http://app.backend.dev,http://localhost:3000
 
 # Postgres configuration variables
 POSTGRES_USER=postgres
