--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@ APP_ENV=dev
 DEBUG=True
 DJANGO_SETTINGS_MODULE=project_name.settings.dev
 ALLOWED_HOSTS='app.backend.dev'
-CSRF_TRUSTED_ORIGINS='http://app.backend.dev'
+CSRF_TRUSTED_ORIGINS='https://*.backend.dev'
 CORS_ALLOWED_ORIGINS=http://app.backend.dev,http://localhost:3000
 
 # Postgres configuration variables
