--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -14,6 +14,7 @@ services:
       - ./src:/usr/src/app/
       - ./deployment/scripts:/app/deployment/scripts/
       - static_files:/usr/src/app/static
+      - media_files:/usr/src/app/media
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}-backend.rule=Host(`${APP_DOMAIN}`)"
@@ -21,6 +22,8 @@ services:
       - "traefik.http.services.${APP_NAME}-backend.loadbalancer.server.port=${APP_PORT}"
       - "traefik.http.routers.${APP_NAME}-backend.tls.certresolver=letsencrypt"
     env_file: .env
+    expose:
+      - "${APP_PORT:-8000}"
     depends_on:
       - db
       - redis
@@ -33,8 +36,8 @@ services:
     volumes:
       - postgres_data_dir:/var/lib/postgresql/data/
     env_file: .env
-    ports:
-      - "5432:5432"
+    expose:
+      - "${POSTGRES_PORT:-5432}"
     shm_size: 1g
 
 
@@ -70,9 +73,10 @@ services:
     volumes:
       - ./deployment/scripts/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - static_files:/usr/src/app/static
+      - media_files:/usr/src/app/media
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.${APP_NAME}-nginx.rule=Host(`${APP_HOST}`) && PathPrefix(`/static`)"
+      - "traefik.http.routers.${APP_NAME}-nginx.rule=Host(`${APP_HOST}`) && (PathPrefix(`/static`) || PathPrefix(`/media`))"
       - "traefik.http.routers.${APP_NAME}-nginx.entrypoints=web"
       - "traefik.http.services.${APP_NAME}-nginx.loadbalancer.server.port=80"
     depends_on:
@@ -101,6 +105,7 @@ services:
 
 volumes:
   static_files:
+  media_files:
   postgres_data_dir:
   redis_data:
   letsencrypt:
