--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,11 @@ testpaths = [
 ]
 pythonpath = [".", "src"]
 python_files = "tests.py test_*.py *_tests.py"
-DJANGO_SETTINGS_MODULE = "conf.settings.test"
+DJANGO_SETTINGS_MODULE = "project_name.settings.test"
+filterwarnings = [
+    'ignore::DeprecationWarning:kombu.*:',
+    'ignore::DeprecationWarning:celery.*:',
+]
 
 [tool.coverage.report]
 fail_under = 85
@@ -58,6 +62,7 @@ extend-exclude = '''
 
 
 [tool.ruff]
+format = "grouped"
 line-length = 88 # black default
 extend-exclude = [
     "*/migrations/*",
