--- a/deployment/scripts/nginx/nginx.conf
+++ b/deployment/scripts/nginx/nginx.conf
@@ -9,5 +9,9 @@ http {
         location /static/ {
             alias /usr/src/app/static/;
         }
+
+        location /media/ {
+            alias /usr/src/app/media/;
+        }
     }
 }
