fix nginx media serve

--- a/deployment/scripts/nginx/nginx.conf
+++ b/deployment/scripts/nginx/nginx.conf
@@ -6,11 +6,13 @@ http {
 
     server {
         listen 80;
-        location /static/ {
+        location /static {
+            autoindex on;
             alias /usr/src/app/static/;
         }
 
-        location /media/ {
+        location /media {
+            autoindex on;
             alias /usr/src/app/media/;
         }
     }
