fix nginx media serve

--- a/deployment/scripts/nginx/nginx.conf
+++ b/deployment/scripts/nginx/nginx.conf
@@ -3,17 +3,14 @@ events {}
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
+    access_log    /var/log/nginx/access.log;
+    error_log     /var/log/nginx/error.log;
 
     server {
         listen 80;
-        location /static {
+        location ~ ^/(images|javascript|js|css|flash|media|static)/  {
             autoindex on;
-            alias /usr/src/app/static/;
-        }
-
-        location /media {
-            autoindex on;
-            alias /usr/src/app/media/;
+            alias /usr/src/app/;
         }
     }
 }
