--- a/deployment/scripts/nginx/nginx.conf
+++ b/deployment/scripts/nginx/nginx.conf
@@ -8,9 +8,14 @@ http {
 
     server {
         listen 80;
-        location ~ ^/(images|javascript|js|css|flash|media|static)/  {
+        location /static {
             autoindex on;
-            alias /usr/src/app/;
+            alias /usr/src/app/static/;
+        }
+
+        location /media {
+            autoindex on;
+            alias /usr/src/app/media/;
         }
     }
 }
