fix nginx media serve

--- a/deployment/scripts/nginx/nginx.conf
+++ b/deployment/scripts/nginx/nginx.conf
@@ -12,7 +12,10 @@ http {
             autoindex on;
             alias /usr/src/app/static/;
         }
+    }
 
+    server {
+        listen 80;
         location /media {
             autoindex on;
             alias /usr/src/app/media/;
