--- a/deployment/scripts/nginx/nginx.conf
+++ b/deployment/scripts/nginx/nginx.conf
@@ -3,14 +3,28 @@ events {}
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    access_log    /var/log/nginx/access.log;
-    error_log     /var/log/nginx/error.log;
+
+    upstream backend {
+        server backend:8000;
+    }
 
     server {
         listen 80;
-        location ~ ^/(images|javascript|js|css|flash|media|static)/  {
-            autoindex on;
-            alias /usr/src/app/;
+
+        location / {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /static/ {
+            alias /usr/src/app/static/;
+        }
+
+        location /media/ {
+            alias /usr/src/app/media/;
         }
     }
 }
