--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,11 +15,11 @@ services:
       - ./deployment/scripts:/app/deployment/scripts/
       - static_files:/usr/src/app/static
       - media_files:/usr/src/app/media
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.${APP_NAME}-backend.rule=Host(`${APP_DOMAIN}`)"
-      - "traefik.http.routers.${APP_NAME}-backend.entrypoints=web"
-      - "traefik.http.services.${APP_NAME}-backend.loadbalancer.server.port=${APP_PORT}"
+#    labels:
+#      - "traefik.enable=true"
+#      - "traefik.http.routers.${APP_NAME}-backend.rule=Host(`${APP_DOMAIN}`)"
+#      - "traefik.http.routers.${APP_NAME}-backend.entrypoints=web"
+#      - "traefik.http.services.${APP_NAME}-backend.loadbalancer.server.port=${APP_PORT}"
     env_file: .env
     expose:
       - "${APP_PORT:-8000}"
@@ -96,10 +96,10 @@ services:
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
       - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
       - "--entrypoints.websecure.address=:443"
-      - "--certificatesresolvers.myresolver.acme.httpchallenge=true"
-      - "--certificatesresolvers.myresolver.acme.httpchallenge.entrypoint=web"
-      - "--certificatesresolvers.myresolver.acme.email=${LETSENCRYPT_EMAIL}"
-      - "--certificatesresolvers.myresolver.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.letsencrypt.acme.email=${LETSENCRYPT_EMAIL}"
+      - "--certificatesresolvers.letsencrypt.acme.storage=/letsencrypt/acme.json"
+      - "--certificatesresolvers.letsencrypt.acme.httpchallenge=true"
+      - "--certificatesresolvers.letsencrypt.acme.httpchallenge.entrypoint=web"
     ports:
       - "80:80"
       - "443:443"
