--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -96,12 +96,14 @@ services:
       - "--api.dashboard=true"
       - "--certificatesresolvers.myResolver.acme.email=${LETSENCRYPT_EMAIL}"
       - "--certificatesresolvers.myResolver.acme.storage=/myResolver/acme.json"
-      - "--certificatesresolvers.myResolver.acme.httpchallenge=true"
-      - "--certificatesresolvers.myResolver.acme.httpchallenge.entrypoint=web"
+      - "--certificatesresolvers.myresolver.acme.dnschallenge=true"
+      - "--certificatesresolvers.myresolver.acme.dnschallenge.provider=ovh"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
       - "--entrypoints.web.http.redirections.entryPoint.scheme=https"
       - "--log.level=DEBUG"
-      - "--log.filePath=/var/log/traefik.log"
+      - "--accesslog=true"
+      - "--tracing=true"
+      - "--api=true"
     labels:
       - "traefik.http.routers.dashboard.rule=Host(`${TRAEFIK_DOMAIN}`) && (PathPrefix(`/`)"
       - "traefik.http.routers.dashboard.tls=true"
