--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -76,10 +76,13 @@ services:
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.${APP_NAME}-nginx.rule=Host(`${APP_DOMAIN}`)"
-      - "traefik.http.routers.${APP_NAME}-nginx.entrypoints=web"
+      - "traefik.http.routers.${APP_NAME}-nginx.entrypoints=websecure"
       - "traefik.http.services.${APP_NAME}-nginx.loadbalancer.server.port=80"
+      - "traefik.http.routers.${APP_NAME}-nginx.tls=true"
+      - "traefik.http.routers.${APP_NAME}-nginx.tls.certresolver=myresolver"
     expose:
       - "80"
+      - "443"
     depends_on:
         - backend
         - traefik
