--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -24,8 +24,8 @@ services:
     expose:
       - "${APP_PORT:-8000}"
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
     command: [ "/bin/sh", "/app/deployment/scripts/backend/start.sh" ]
 
   db:
@@ -38,6 +38,11 @@ services:
     expose:
       - "${POSTGRES_PORT:-5432}"
     shm_size: 1g
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER}", "-d", "${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 
   redis:
