--- a/src/requirements.dev.txt
+++ b/src/requirements.dev.txt
@@ -1,4 +1,7 @@
 -r requirements.txt
+pytest==7.3.1
+pytest-django==4.5.2
+pytest-sugar==0.9.7
+coverage[toml]==7.2.5
 black==23.3.0
 ruff==0.0.265
-coverage[toml]==7.2.5
