fix: settings && update readme

--- a/env.example
+++ b/env.example
@@ -3,9 +3,8 @@ APP_NAME=project_name
 APP_HOST=0.0.0.0
 APP_PORT=8000
 SECRET_KEY='ur secret key'
-APP_ENV=dev
+APP_ENV='dev' # Could be dev, prod or test
 DEBUG=True
-DJANGO_SETTINGS_MODULE=project_name.settings.dev
 ALLOWED_HOSTS='app.backend.dev'
 CSRF_TRUSTED_ORIGINS='https://*.backend.dev'
 CORS_ALLOWED_ORIGINS=http://app.backend.dev,http://localhost:3000
